# boilerTemplatesInitializer

./: CMakeLists.txt  LICENSE  README.md
include/: projGenerator.hpp  router.hpp
src/: main.cpp  projGenerator.cpp  router.cpp
templates/basicCMakeProj/: CMakeLists.txt  README.md
templates/basicCMakeProj/include/: something.hpp
templates/basicCMakeProj/src/: main.cpp
